log
Thu 21 Mar 2024 01:52:19 AM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|4
total_score: 10/70
4d3726e
Thu 21 Mar 2024 01:55:46 AM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:61:23: error: invalid use of incomplete typedef ‘List’
   61 |   for(int i = 0; i < L->size; i++){
      |                       ^~
exercises.c:62:22: error: invalid use of incomplete typedef ‘List’
   62 |     suma += *((int*)L->data[i]);
      |                      ^~
Compilation failed
4d3726e
Thu 21 Mar 2024 02:04:00 AM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
7b6569d
Thu 21 Mar 2024 02:31:37 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:79:8: error: unused variable ‘elemento’ [-Werror=unused-variable]
   79 |   int *elemento = (int*)first(L);
      |        ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
311ea74
